항해99 입학시험

--- a/templates/index.html
+++ b/templates/index.html
@@ -108,6 +108,7 @@
                         }else {
                             temp_html = `<li>
                                             <h2 class="done">✅ ${bucket}</h2>
+                                            <button onclick="cancel_bucket(${num})" type="button" class="btn btn-outline-danger">취소!</button>
                                         </li>`
                         }
                         $('#bucket-list').append(temp_html)
@@ -137,6 +138,18 @@
             $.ajax({
                 type: "POST",
                 url: "/bucket/done",
+                data: {num_give: num},
+                success: function (response) {
+                    alert(response["msg"])
+                    window.location.reload()
+                }
+            });
+        }
+
+        function cancel_bucket(num) {
+            $.ajax({
+                type: "POST",
+                url: "/bucket/cancel",
                 data: {num_give: num},
                 success: function (response) {
                     alert(response["msg"])
